<resources>
    <string name="app_name">HoTroVNDemo</string>

    <!--String in activity main-->
    <string name="heading">HOTROVN</string>
    <string name="title1">Lan toả niềm tin</string>
    <string name="title_question">Bạn đang quan tâm ?</string>
    <string name="need_help">CẦN CỨU TRỢ</string>
    <string name="helper">MẠNH THƯỜNG QUÂN</string>

    <!--String in activity login phone number-->
    <string name="hint_enter_phone_number">Nhập số điện thoại</string>
    <string name="accept">Khi đăng nhập, bạn đồng ý với</string>
    <string name="terms_of_service">Điều khoản dịch vụ</string>
    <string name="and">và</string>
    <string name="policy_and_privacy">Chính Sách và Sự Riêng Tư</string>
    <string name="ours">của chúng tôi</string>
    <string name="next">Tiếp theo</string>

    <!--String in activity relief bulletin-->
    <string name="relief_bulletin">BẢNG TIN CỨU TRỢ</string>
    <string name="add_relief_newsletter">Thêm bản tin</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="selected_province">Chọn tỉnh</string>
    <string name="selected_city">Chọn thành phố</string>
    <string name="selected_district">Quận/Huyện/Xã</string>
    <string name="filtering_news">Lọc tin</string>
    <string name="map">Bản đồ</string>

    <!--String in activity relief information-->
    <string name="relief_information">THÔNG TIN CỨU TRỢ</string>
    <string name="create_relief_campaign">Tạo chiến dịch</string>

    <!--String in activity create relief newsletter-->
    <string name="create_news">Tạo bản tin</string>
    <string name="my_location">Vị trí của bạn</string>
    <string name="caller_name">Người kêu gọi</string>
    <string name="role">Vai trò</string>
    <string name="phone">Điện thoại</string>
    <string name="describe_the_situation">Mô tả tình hình</string>
    <string name="what_need_help">Cần hỗ trợ những gì?</string>
    <string name="add_picture_of_the_situation">Thêm ảnh tình hình</string>
    <string name="save">Lưu</string>

    <!--String in activity create relief campaign-->
    <string name="relief_campaign">Chiến dịch cứu trợ</string>
    <string name="contact_name">Người liên hệ</string>
    <string name="organization_unit">Tổ chức/Đơn vị</string>
    <string name="time">Thời gian</string>
    <string name="items">Mặt hàng</string>
    <string name="add_picture_of_items">Thêm ảnh mặt hàng</string>

    <!--String in dialog notify successful-->
    <string name="relief_newsletter_successful">Bạn đã cứu trợ thành công!</string>
    <string name="relief_campaign_successful">Thông tin sẽ được gởi đến người kêu gọi</string>
    <string name="string_on_dialog_create_newsletter">Các mạnh thường quân sẽ nhận được bản tin cứu trợ của bạn sớm!</string>
    <string name="done">XONG</string>
    <string name="relief_location">Vị trí cần hỗ trợ</string>


</resources>