<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/timesbd"
            android:text="@string/heading"
            android:textColor="@color/color_green"
            android:textSize="@dimen/size_app_name"
            app:layout_constraintBottom_toBottomOf="@+id/g0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/information"
            android:text="@string/title1"
            android:textColor="@color/color_orange_title"
            android:textSize="@dimen/size_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeading" />

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/times"
            android:text="@string/title_question"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size_text"
            app:layout_constraintBottom_toBottomOf="@+id/g0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <Button
            android:id="@+id/btnNeedRelief"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:background="@drawable/bg_button_green"
            android:backgroundTint="@color/color_green"
            android:fontFamily="@font/times"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/need_help"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_button_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/g0" />

        <Button
            android:id="@+id/btnHelperJoined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_button_green"
            android:backgroundTint="@color/color_green"
            android:fontFamily="@font/times"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/helper"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_button_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnNeedRelief" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>