<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/transition"
            android:src="@drawable/ic_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:background="@color/transition"
            android:fontFamily="@font/timesi"
            android:gravity="center"
            android:hint="@string/hint_enter_phone_number"
            android:inputType="number"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_gray_text"
            android:textSize="@dimen/et_phone_number"
            app:layout_constraintBottom_toBottomOf="@id/g0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_vietnam_flag" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="Việt Nam (+84)"
                android:textColor="@color/color_gray_text"
                android:textSize="@dimen/tv_VietNam" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTermsAndPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPhoneNumber">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:textColor="@color/color_gray_text"
                android:textSize="@dimen/tv_term_and_policy" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:text="@string/terms_of_service"
                    android:textColor="@color/color_green"
                    android:textSize="@dimen/tv_term_and_policy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/and"
                    android:textColor="@color/color_green"
                    android:textSize="@dimen/tv_term_and_policy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="@string/policy_and_privacy"
                    android:textColor="@color/color_green"
                    android:textSize="@dimen/tv_term_and_policy" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ours"
                android:textColor="@color/color_green"
                android:textSize="@dimen/tv_term_and_policy" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:background="@color/color_gray_border"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:background="@drawable/bg_button_green"
            android:backgroundTint="@color/color_green"
            android:fontFamily="@font/times"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_button_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/g0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>