<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/color_white"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20sdp"
                android:src="@drawable/ic_distribution" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relief_newsletter_successful"
                android:textColor="@color/color_green"
                android:textSize="@dimen/tv_dialog_relief_newsletter"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/tahoma"
                android:gravity="center"
                android:text="@string/string_on_dialog_create_newsletter"
                android:textColor="@color/color_gray_text"
                android:textSize="@dimen/tv_mini_dialog_relief_newsletter" />

            <Button
                android:id="@+id/btnDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/bg_button_green"
                android:backgroundTint="@color/color_green"
                android:text="@string/done"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_button_dialog_relief_newsletter" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>