<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_gray_background1">

        <RelativeLayout
            android:id="@+id/layoutHeading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/color_white"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:layout_width="@dimen/_30sdp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@color/transition"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_30sdp"
                android:fontFamily="@font/tahomabd"
                android:text="@string/relief_campaign"
                android:textColor="@color/color_black"
                android:textSize="@dimen/title_default" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/color_gray_border" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btnSave"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeading">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/bg_corner_stroke"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tahoma"
                        android:text="@string/contact_name"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/text_view_default" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/bg_corner_stroke_edit_text"
                        android:fontFamily="@font/tahoma"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/et_default" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tahoma"
                        android:text="@string/role"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/text_view_default" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/bg_corner_stroke_edit_text"
                        android:fontFamily="@font/tahoma"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/et_default" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tahoma"
                        android:text="@string/phone"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/text_view_default" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/bg_corner_stroke_edit_text"
                        android:fontFamily="@font/tahoma"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/et_default" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tahoma"
                        android:text="@string/organization_unit"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/text_view_default" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/bg_corner_stroke_edit_text"
                        android:fontFamily="@font/tahoma"
                        android:inputType="textCapSentences"
                        android:maxLines="2"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/et_default" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/bg_corner_stroke"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tahoma"
                        android:text="@string/time"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/text_view_default" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/bg_corner_stroke_edit_text"
                        android:padding="@dimen/_5sdp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_30sdp"
                            android:background="@color/transition"
                            android:enabled="false"
                            android:fontFamily="@font/tahoma"
                            android:inputType="text"
                            android:textSize="@dimen/et_default" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@color/transition"
                            android:src="@drawable/ic_calendar" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tahoma"
                        android:text="@string/items"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/text_view_default" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/bg_corner_stroke_edit_text"
                        android:fontFamily="@font/tahoma"
                        android:gravity="top"
                        android:inputType="textCapSentences"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/et_default" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:background="@drawable/bg_button_add_image"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:paddingVertical="@dimen/_3sdp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_picture_gallery" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:fontFamily="@font/tahomabd"
                            android:text="@string/add_picture_of_items"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/text_view_default" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_button_green"
            android:backgroundTint="@color/color_green"
            android:fontFamily="@font/tahoma"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_button_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>